# hex3

./: .gitignore  AGENTS.md  ALGO.md  CLAUDE.md  CODEBASE_REVIEW.md  Cargo.toml  NOISE_NOTES.md  PROPOSAL_HYDROLOGY_WATERBODIES.md  PROPOSAL_STRESS_PROPAGATION_A.md  RENDERING_IDEAS.md  RENDERING_PHILOSOPHY.md  analysis_12345.md  certification-notes.md  code.rs  code2.rs  geometry-notes.md  gpu_voronoi_fix_summary.md  perf-callgraph.txt  perf-report.txt  plan.md  plan2.md  voronoi_soundness_proposals.md
.claude/: settings.local.json
crates/s2-voronoi/: Cargo.toml
crates/s2-voronoi/docs/: analysis.md
crates/s2-voronoi/src/: convex_hull.rs  diagram.rs  lib.rs  types.rs
crates/s2-voronoi/src/cube_grid/: bounds_test.rs  mod.rs  packed_knn.rs  tests.rs
crates/s2-voronoi/src/knn_clipping/: cell_builder.rs  certify.rs  constants.rs  knn.rs  live_dedup.rs  mod.rs  predicates.rs  tests.rs  timing.rs
crates/s2-voronoi/tests/: api.rs  correctness.rs
docs/: binlocal_knn_optimizations.md  knn_filtering_proposal.md  knn_optimization_snippet.md  s2_bounds_2_3.md  staged_knn_proposal.md
scripts/: analyze  analyze_terrain.py  bench_build.sh  bench_run.sh  perf.sh
src/: lib.rs  main.rs  util.rs
src/app/: coloring.rs  export.rs  mod.rs  state.rs  view.rs  visualization.rs  world.rs
src/geometry/: convex_hull.rs  cube_grid.rs  gpu_voronoi.rs  lloyd.rs  mesh.rs  mod.rs  plates.rs  sphere.rs  tectonics.rs  validation.rs  voronoi.rs
src/geometry/cube_grid/: batched_knn.rs  bench_knn.rs  knn_experiments.rs  mod.rs  packed_knn.rs  tests.rs
src/geometry/gpu_voronoi/: cell_builder.rs  constants.rs  dedup.rs  f32_fast.rs  knn.rs  live_dedup.rs  mod.rs  tests.rs  timing.rs
src/render/: buffer.rs  camera.rs  context.rs  cubemap.rs  elevation_map.rs  mod.rs  particles.rs  pipeline.rs  renderer.rs  uniform.rs  vertex.rs
src/shaders/: colored_line.wgsl  cubemap.wgsl  edge.wgsl  elevation_map.wgsl  jfa.wgsl  jfa_render.wgsl  jfa_sphere.wgsl  layered.wgsl  particle_render.wgsl  sphere.wgsl  surface_line.wgsl  unified.wgsl  voronoi_compute.wgsl  wind_particles.wgsl
src/world/: atmosphere.rs  boundary.rs  constants.rs  dynamics.rs  elevation.rs  features.rs  gen.rs  hydrology.rs  mod.rs  plates.rs  stress.rs  tessellation.rs
tests/: s2_voronoi_integration.rs
