[package]
name = "hex3"
version = "0.1.0"
edition = "2021"
default-run = "hex3"

[profile.release]
debug = true

[dependencies]
# Graphics
wgpu = "27"
winit = "0.30"
pollster = "0.4"

# Math
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.19", features = ["derive"] }
encase = { version = "0.10", features = ["glam"] }

# Utilities
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
noise = "0.9"
ordered-float = "4.2"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
smallvec = "1.13"

# Convex hull
qhull-enhanced = "0.1"

# Spatial indexing
kiddo = "4"

# Fast hashing for integer keys
rustc-hash = "2"

# CLI and serialization
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
